Display of the Tasks and Updating selections

--- a/styles.css
+++ b/styles.css
@@ -7,61 +7,50 @@
 }
 
 /* Style for Home Buttons */
-.home-btn{
-    margin: auto;
+.home-btn {
     padding: 15px 30px;
     border: none;
     cursor: pointer;
-    font-size: 20.58px;   
+    font-size: 20.58px;
 }
 
-.active-btn{
+.active-btn {
     background-color: purple;
     color: white;
 }
 
 /* Classes to change the display */
-.show{
+.show {
     display: block;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
 /* Style for Task Box and Form */
+.bigbox{
+    margin-top: 7%;
+    display: flex;
+}
+
 .task {
-    /* display: flex; */
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
     margin: auto;
-    padding: 5% 35%;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-around; */
-    justify-content: center;
-    background-color: white;
-    width: 400px;
-    border-radius: 8px;
     padding: 20px 40px;
     box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
 }
 
 /* Styling Input Areas and Buttons */
-
 .input {
-    height: 100%;
     width: 100%;
     border: 1px solid #DADCE0;
-    border-radius: 7px;
+    border-radius: 10px;
     font-size: 16px;
     padding: 10px 20px;
     outline: none;
-    background: none;
     z-index: 1;
     text-align: center;
 }
@@ -71,7 +60,7 @@
     margin-bottom: 17px;
 }
 
-.inputarea textarea{
+.inputarea textarea {
     text-align: justify;
     resize: none;
 }
@@ -92,16 +81,21 @@
     z-index: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .submit-btn {
     display: block;
     margin: auto;
-    padding: 15px 30px;
+    margin-top: 17px;
+    padding: 10px 50px;
     border: none;
     background-color: purple;
     color: white;
     border-radius: 40px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .submit-btn:hover {
@@ -128,4 +122,66 @@
     z-index: 10;
     font-size: 14px;
     font-weight: 600;
+}
+
+
+.flip-card {
+    background-color: transparent;
+    /* width: 400px; */
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    margin-bottom: 2%;
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner{
+    transform: rotateY(180deg);
+}
+
+.rotatey{
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    background-color: black;
+    color: white;
+}
+
+/* Style the back side */
+.flip-card-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+    text-align: justify;
+    overflow-y: auto;
+}
+
+.innertext{
+    word-wrap: break-word;
+    padding: 5%;
+}
+
+.item-list{
+    margin-top: 7%;
 }
