--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,8 @@ a{
 }
 
 .submit-btn:hover {
-    background-color: #9867C5;
-    transform: translateY(-2px);
+    background-color : #9867C5;
+    transform : translateY(-2px);
 }
 
 .input:focus+.label {
@@ -143,6 +143,15 @@ a{
     transform: rotateY(180deg);
 }
 
+.flip-card {
+    background-color: transparent;
+    margin-top: 13%;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    margin-bottom: 2%;
+}
+
 /* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
@@ -167,12 +176,14 @@ a{
     overflow-y: auto;
 }
 
+
 .innertext{
     word-wrap: break-word;
     padding: 5%;
 }
 
 .optcard{
+    z-index: 10;
     margin-top: 3%;
     width: 100%;
     justify-content: center;
@@ -187,15 +198,6 @@ a{
 
 .optcard i:hover{
     cursor: pointer;
-}
-
-.flip-card {
-    background-color: transparent;
-    margin-top: 11%;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px;
-    margin-bottom: 2%;
 }
 
 @media (min-width:1000px){
@@ -215,3 +217,9 @@ a{
     text-align: center;
     margin: 200px auto 50px;
 }
+
+.notfilled{
+    border: 2px solid red;
+    border-radius: 10px;
+}
+
